--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ https://templatemo.com/tm-591-villa-agency
         <div class="col-lg-10 offset-lg-1">
           <div class="video-frame">
             <img src="assets/images/video-frame.jpg" alt="">
-            <a target="_blank"><i class="fa fa-play"></i></a>
+            <a href="https://youtu.be/9huOvTZyZek?si=DNP_gy5H-_8gRwMI" target="_blank"><i class="fa fa-play"></i></a>
           </div>
         </div>
       </div>
